[package]
name = "nannou-clock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18.1"
nannou_egui = "0.5.0"
chrono = "0.4.31"
color-eyre = "0.6.2"

[profile.dev]
opt-level = 2

[profile.release]
lto = true